--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, suse linux enterprise server 15, suse, linux, 15, neta
 summary: Describes how to use SUSE Linux Enterprise Server 15 with ONTAP
 ---
 
-= Using SUSE Linux Enterprise Server 15 with ONTAP
+= Use SUSE Linux Enterprise Server 15 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
