--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 7, netapp, ontap, sanhost, iscsi, 
 summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release
 ---
 
-= Using Veritas Infoscale 7 for Linux with ONTAP
+= Use Veritas Infoscale 7 for Linux with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
