--- a/_include/hu/reuse_hu_installing_luhu_with32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_with32.adoc
@@ -1,6 +1,6 @@
 The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/NOW/cgi-bin/software/?product=Host+Utilities+-+SAN&platform=Linux[NetApp Support Site^] in a 32-bit and 64-bit .rpm file. If you do not know which file is right for your configuration, use the link:https://mysupport.netapp.com/matrix/#welcome[NetApp Interoperability Matrix Tool^] to verify which one you need.
 
-NetApp strongly recommends installing the Linux Unified Host Utilities, but not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
+NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
 .What you'll need
 
