--- a/hu_centos_64.adoc
+++ b/hu_centos_64.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, cent, os, 6.4, netapp, ontap
 summary: Describes how to use CentOS 6.4 with ONTAP
 ---
 
-= Using CentOS 6.4 with ONTAP
+= Use CentOS 6.4 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
