--- a/hu_centos_66.adoc
+++ b/hu_centos_66.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, cent, os, 6.6, netapp, ontap
 summary: Describes how to use CentOS 6.6 with ONTAP
 ---
 
-= Using CentOS 6.6 with ONTAP
+= Use CentOS 6.6 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
