--- a/hu_centos_69.adoc
+++ b/hu_centos_69.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, cent, os, 6.9, netapp, ontap, linux
 summary: Describes how to use CentOS 6.9 with ONTAP
 ---
 
-= Using CentOS 6.9 with ONTAP
+= Use CentOS 6.9 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
