--- a/hu_sles_15SP3.adoc
+++ b/hu_sles_15SP3.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, suse linux enterprise server 15 sp3, suse, linux, 15 s
 summary: Describes how to use SUSE Linux Enterprise Server 15 SP3 with ONTAP
 ---
 
-= Using SUSE Linux Enterprise Server 15 SP3 with ONTAP
+= Use SUSE Linux Enterprise Server 15 SP3 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
