--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -14,7 +14,7 @@ summary: Describes how to use Citrix XenServer 7.x with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Introduction
+[.lead]
 
 This document provides guidance on ONTAP SAN host configuration settings for Citrix XenServer 7 series OS releases with FC, FCoE, and iSCSi protocols.
 
