--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -245,7 +245,7 @@ The NVMe-oF host configuration for ESXi 7.x with ONTAP release has the following
 |link:https://mysupport.netapp.com/site/bugs-online/product/ONTAP/BURT/1420654[1420654^]	|ONTAP node non-operational when NVMe/FC protocol is used with ONTAP version 9.9.1 |Check and rectify any network issues in the host fabric. If this does not help, upgrade to a patch that fixes this issue.
 |===
 
-.Related links
+.Related information
 
 link:https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597-VMware vSphere with ONTAP^]
 link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster  (2031038)^]
