--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -14,9 +14,9 @@ summary: Describes how to use Citrix Hypervisor 8.x with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Introduction
+[.lead]
 
-This document provides guidance on ONTAP SAN host configuration settings for Citrix Hypervisor 8 series OS releases with FC, FCoE and iSCSi protocols.
+You can configure ONTAP SAN host configuration settings for Citrix Hypervisor 8 series OS releases with FC, FCoE and iSCSi protocols.
 
 == SAN Booting
 
