--- a/hu_vsphere_6.adoc
+++ b/hu_vsphere_6.adoc
@@ -14,8 +14,8 @@ summary: Describes how to use Veritas Infoscale 6.5 and 6.7 for Linux with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Introduction
-This document provides guidance on ONTAP SAN host configuration settings for the vSphere 6.5.x and 6.7.x releases with FC, FCoE and iSCSI protocols.
+[.lead]
+you can use ONTAP SAN host configuration settings for the vSphere 6.5.x and 6.7.x releases with FC, FCoE and iSCSI protocols.
 
 == Hypervisor SAN Booting
 
@@ -261,7 +261,7 @@ during storage failover testing on all the 7-mode, C-cmode cluster controllers.
 |===
 
 
-== Related Links
+== Related information
 
 * link:https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597-VMware vSphere with ONTAP^]
 * link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster (2031038)^]
