--- a/nvme_sles15_sp1.adoc
+++ b/nvme_sles15_sp1.adoc
@@ -14,7 +14,8 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 :linkattrs:
 :imagesdir: ./media/
 
-== Supportability
+[.lead]
+You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running SUSE Linux Enterprise Server 15 SP1 and ONTAP as the target.
 
 NVMe/FC is supported on ONTAP 9.6 or later for the following versions of SLES:
 
