--- a/hu_vsphere_7.adoc
+++ b/hu_vsphere_7.adoc
@@ -273,7 +273,7 @@ Use the following command to verify the QFullSampleSize
 
 There are no known issues.
 
-== Related information
+.Related information
 
 * link:https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597-VMware vSphere with ONTAP^]
 * link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster (2031038)^]
