--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -15,7 +15,7 @@ summary: Describes how to install the solaris host utilities
 :imagesdir: ./media/
 
 
-== Installing the Solaris Host Utilities
+== Install the Solaris Host Utilities
 
 You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^]. After you have the file, you must extract it to get the software packages you need to install the Host Utilities.
 
