--- a/hu_rhel_87.adoc
+++ b/hu_rhel_87.adoc
@@ -121,3 +121,7 @@ devices {
 
 include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
+== Known issues
+
+There are no known issues for RHEL 8.7.
+
