--- a/hu_rhel_88.adoc
+++ b/hu_rhel_88.adoc
@@ -139,8 +139,6 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues.
+There are no known issues for RHEL 8.8.
 
-== Release Notes
 
-include::_include/hu/reuse_hu_release_notes.adoc[]
