--- a/hu_solaris_114.adoc
+++ b/hu_solaris_114.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 :imagesdir: ./media/
 
 
-== Installing the Solaris Host Utilities
+== Install the Solaris Host Utilities
 
 You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^]. After you have the file, you must decompress it to get the software packages you need to install the Host Utilities.
 
