--- a/hu_veritas_6x.adoc
+++ b/hu_veritas_6x.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 6.x, netapp, ontap, san, lun, mult
 summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 6 series release
 ---
 
-= Using Veritas Storage Foundation 6 for Linux with ONTAP
+= Use Veritas Storage Foundation 6 for Linux with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
