Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -16,7 +16,7 @@ summary: Describes how to use Citrix XenServer 7.x with ONTAP
 
 [.lead]
 
-This document provides guidance on ONTAP SAN host configuration settings for Citrix XenServer 7 series OS releases with FC, FCoE, and iSCSi protocols.
+You can configure ONTAP SAN host configuration settings for Citrix XenServer 7 series OS releases with FC, FCoE, and iSCSi protocols.
 
 == SAN Booting
 
