--- a/hu_vsphere_6.adoc
+++ b/hu_vsphere_6.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use Veritas Infoscale 6.5 and 6.7 for Linux with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-you can use ONTAP SAN host configuration settings for the vSphere 6.5.x and 6.7.x releases with FC, FCoE and iSCSI protocols.
+You can use ONTAP SAN host configuration settings for the vSphere 6.5.x and 6.7.x releases with FC, FCoE and iSCSI protocols.
 
 == Hypervisor SAN Booting
 
