--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -352,7 +352,7 @@ Device      Vserver         Namespace Path             NSID UUID                
 
 == Known issues 
 
-The NVMe-oF host configuration for OL 8.3 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for OL 8.3 with ONTAP has the following known issues:
 
 [options="header", cols="20, 20, 50, 20"]
 |===
