--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -362,7 +362,7 @@ NSID    UUID                                   Size
 
 == Known issues
 
-The NVMe-oF host configuration for OL 8.5 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for OL 8.5 with ONTAP has the following known issues:
 [options="header", cols="20, 20, 50, 20]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
