--- a/hu_ol_92.adoc
+++ b/hu_ol_92.adoc
@@ -143,7 +143,7 @@ You can also use the recommended settings to configure Kernel-based Virtual Mach
 
 == Known issues
 
-The Oracle Linux 9.2 with NetApp ONTAP release has the following known issues:
+The Oracle Linux 9.2 with ONTAP has the following known issues:
 
 [cols="10,30,30,10",options="header"]
 |===
