--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -266,7 +266,7 @@ hdisk1  11       Enabled  Sel,Non      nvme60  fcnvme0, 9
 
 == Known issues 
 
-The NVMe/FC host configuration for AIX with ONTAP release has the following known issues:
+The NVMe/FC host configuration for AIX with ONTAP has the following known issues:
 
 [cols="10,30,30",options="header"]
 |===
@@ -279,6 +279,6 @@ The NVMe/FC host configuration for AIX with ONTAP release has the following know
 |===
 
 
-== Troubleshooting
+== Troubleshoot
 
 Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications. If you are still facing issues, contact link:mysupport.netapp.com[NetApp support^] for further triage.
