--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -237,7 +237,7 @@ tcp.vmnic3:34:80:Od:30:ca:el-tcp.unknown-uuid.400bf333abf74ab8b96dc18ffadc3f99
 
 == Known issues
 
-The NVMe-oF host configuration for ESXi 7.x with ONTAP release has the following known issues:
+The NVMe-oF host configuration for ESXi 7.x with ONTAP has the following known issues:
 
 [cols="10,30,30",options="header"]
 |===
