--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -365,7 +365,7 @@ NSID        UUID                                  Size
 
 == Known issues 
 
-The NVMe-oF host configuration for OL 8.4 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for OL 8.4 with ONTAP has the following known issues:
 
 [cols="10,30,30,10",options="header"]
 |===
