--- a/nvme_ol_86.adoc
+++ b/nvme_ol_86.adoc
@@ -348,7 +348,7 @@ NSID       UUID                                   Size
 
 == Known issues
 
-The NVMe-oF host configuration for OL 8.6 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for OL 8.6 with ONTAP has the following known issues:
 
 [options="header", cols="20, 20, 50, 20]
 |===
