--- a/nvme_rhel_86.adoc
+++ b/nvme_rhel_86.adoc
@@ -364,7 +364,7 @@ NSID  UUID                                   Size
 
 == Known issues 
 
-The NVMe-oF host configuration for RHEL 8.6 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for RHEL 8.6 with ONTAP has the following known issues:
 
 [cols="10,30,30,10",options="header"]
 |===
