--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -413,7 +413,7 @@ NSID UUID                                   Size
 
 == Known issues
 
-The NVMe-oF host configuration for RHEL 9.1 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
 
 [cols="10,30,30,10",options="header"]
 |===
