--- a/nvme_windows_2012r2.adoc
+++ b/nvme_windows_2012r2.adoc
@@ -15,7 +15,7 @@ summary: NVMe/FC Host Configuration for Windows Server 2012 R2 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2012 R2 and ONTAP as the target.
+You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running Windows Server 2012 R2 using ONTAP as the target.
 
 NVMe/FC is supported on ONTAP 9.7 or later for Windows Server 2012.
 
