edits to linux guide

--- a/hu_nvme_index..adoc
+++ b/hu_nvme_index..adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu_nvme_index.html
-keywords:
-summary: 
+keywords: nvme, san, host, aix, linux, vsphere, windows
+summary: You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol.
 ---
 = Overview
 :toc: macro
