--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -14,6 +14,8 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
+The Solaris Unified Host Utilities assists you to manage NetApp ONTAP storage attached to a Solaris host. 
 
 == SAN Toolkit
 
