--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -14,6 +14,8 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
+The AIX Unified Host Utilities assists you to manage NetApp ONTAP storage attached to an AIX host. 
 
 == SAN Toolkit
 
