--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -14,6 +14,8 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
+The HP-UX Unified Host Utilities assists you to manage NetApp ONTAP storage attached to a HP-UX host. 
 
 == SAN Toolkit
 HP-UX Host Utilities is a NetApp host software that provides a command line tool kit on your HP-UX host. The toolkit is installed when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility which helps you manage the LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
