Edits in AIX, Solaris and HP-UX

--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -34,13 +34,9 @@ The Release Notes are updated between product releases as new information is ava
 * HP-UX 11iv2
 * HP-UX 11iv3
 
-== Known Problems and Limitations
+== Known problems and limitations
 
 There are no known issues for the HP-UX 6.0 release.
-
-== About SAN Host Configuration documentation
-
-Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation.] The ONTAP SAN Host configuration documentation is cumulative, covering all current SAN Host releases. Any functional differences across releases are noted in context.
 
 .Related information
 
