--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -40,7 +40,7 @@ data_vserver                     /vol/vol3/lun4     /dev/rdsk/c0t600A09803830443
 [NOTE]
 This toolkit is common across all configurations and protocols of the Host Utilities. As a result, some of its contents apply to one configuration, but not another. Having unused components does not affect your system performance.
 
-== Installing Solaris Host Utilities
+== Install Solaris Host Utilities
 
 The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary Host Utilities environments are:
 
