--- a/hu_aix_61_cmd.adoc
+++ b/hu_aix_61_cmd.adoc
@@ -16,7 +16,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 
 [.lead]
 
-You can use the command reference for for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
+You can use the AIX Host Utilities 6.1 command reference for for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
 
 == List all host initiators mapped to host
 
