Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/overview.adoc
+++ b/overview.adoc
@@ -22,7 +22,7 @@ NOTE: In a cloud environment, hosts are typically referred to as clients. All ho
 
 For example, you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
 
-Proper configuration is important for best performance and successful failover.  
+Correct configuration is important for best performance and successful failover.  
 
 .Related information
 
