--- a/hu_wuhu_rn.adoc
+++ b/hu_wuhu_rn.adoc
@@ -15,7 +15,7 @@ summary: Release Notes for Windows Unified Host Utilities
 :imagesdir: ./media/
 
 [.lead]
-This Release Notes document contains the latest information for the Windows Unified Host Utilities 7.2 and 7.1 releases, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
+The release notes document contains the latest information for the Windows Unified Host Utilities 7.2 and 7.1 releases, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
 
 == About the Windows Unified Host Utilities 
 
