Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/hu_solaris_62_rn.adoc
+++ b/hu_solaris_62_rn.adoc
@@ -17,7 +17,7 @@ summary: Release Notes for Solaris Host Utilities 6.2
 [.lead]
 The release notes document contains the latest information for the Solaris Host Utilities 6.2, including updates about known problems, limitations, configuring and managing your ONTAP storage systems.
 
-The Release Notes document is updated when new information on using the Solaris Host Utilities becomes available.
+The release notes document is updated when new information on using the Solaris Host Utilities becomes available.
 
 
 == About the Solaris Host Utilities 6.2 release
