--- a/nvme_ol_88.adoc
+++ b/nvme_ol_88.adoc
@@ -92,6 +92,25 @@ vs_nvme207   nvme_ss_ol_1    nqn.2014-08.org.nvmexpress:uuid:bc59d14c-47f3-11eb-
 [NOTE]
 If the `hostnqn` strings do not match, you can use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
+. Reboot the host. 
++
+[NOTE]
+====
+If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and `dm-multipath` for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from `dm-multipath` to prevent `dm-multipath` from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf` file: 
+
+----
+# cat /etc/multipath.conf 
+
+defaults { 
+  enable_foreign     NONE 
+} 
+----
+====
+
+. Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect. 
+
+ 
+
 == Configure NVMe/FC
 
 You can configure NVMe/FC for Broadcom/Emulex adapters or Marvell/Qlogic adapters.
