--- a/hu_sles_15SP5.adoc
+++ b/hu_sles_15SP5.adoc
@@ -68,7 +68,7 @@ size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
 
 include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
-== Recommended Settings
+== Recommended settings
 
 SUSE Linux Enterprise Server 15 SP5 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configurations. You can further optimize performance for your host configuration with the following recommended settings.
 
@@ -122,14 +122,6 @@ devices {
 
 == Known issues
 
-The SUSE Linux Enterprise Server 15 SP5 with NetApp ONTAP release has the following known issues:
+There are no known issues.
 
-[options="header", cols="20, 20, 50,20"]
-|===
-|NetApp Bug ID	|Title	|Description	|Bugzilla ID
-|1532179   	|A SLES 15SP5 SAN booted host with an Emulex HBA encounters stalled tasks leading to kernel disruption	|During a storage failover giveback operation, a SLES15 SP5 SAN booted host with an Emulex host bus adapeter (HBA) encounters stalled tasks leading to kernel disruption. The kernel disruption causes the operating system to reboot and if kdump is configured, it generates the vmcore file under the /var/crash/ directory. The issue is being triaged with the lpfc driver, but it cannot be reproduced consistently. |1208410
-|===
 
-== Release Notes
-
-include::_include/hu/reuse_hu_release_notes.adoc[]
