--- a/nvme_sles15_sp5.adoc
+++ b/nvme_sles15_sp5.adoc
@@ -65,7 +65,7 @@ You can use the following procedure to validate the minimum supported SLES 15 SP
 nvme-cli-2.2.1+3.gd028407-150500.2.4.x86_64
 ----
 +
-The `nvme-cli` MU package now includes the following:
+The `nvme-cli` MU package includes the following:
 
 ** *NVMe/FC auto-connect scripts* - The auto-connect scripts are required for NVMe/FC auto-reconnect when underlying paths to the namespaces are restored as well as during host reboot:
 +
@@ -105,7 +105,7 @@ ACTION=="add", SUBSYSTEM=="nvme-subsystem", ATTR{model}=="NetApp E-Series", ATTR
 
 ** *NetApp plug-in for ONTAP devices* - The existing NetApp plug-in has now been modified to handle ONTAP namespaces as well.
 
-. Install the libnvme package:
+. Install the `libnvme` package:
 +
 ----
 # rpm -qa|grep libnvme
