--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -23,10 +23,10 @@ blacklist {
 }
 ----
 Replace the `<DevId>` with the `WWID` string of the device you want to exclude.
-
++
 .Example
-In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
-
+In this example, we are going to determine the WWID of a device and add to the `multipath.conf` file.
++
 .Steps
 
 . Run the following command to determine the WWID:
@@ -35,6 +35,8 @@ In this example, `sda` is the local SCSI disk that we need to add to the blackli
 # /lib/udev/scsi_id -gud /dev/sda
 360030057024d0730239134810c0cb833
 ----
++
+`sda` is the local SCSI disk that we need to add it to the blacklist.
 
 . Add the `WWID` to the blacklist stanza in `/etc/multipath.conf`:
 +
