--- a/hu_sles_15SP5.adoc
+++ b/hu_sles_15SP5.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, suse linux enterprise server 15 sp5, suse, linux, 15 s
 summary: Describes how to use SUSE Linux Enterprise Server 15 SP5 with ONTAP
 ---
 
-= Using SUSE Linux Enterprise Server 15 SP5 with NetApp ONTAP
+= Use SUSE Linux Enterprise Server 15 SP5 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -14,7 +14,7 @@ summary: Describes how to use SUSE Linux Enterprise Server 15 SP5 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-== Installing the Linux Unified Host Utilities
+== Install the Linux Unified Host Utilities
 
 include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
 
@@ -33,7 +33,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For SUSE Linux Enterprise Server 15 SP5 the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. SUSE Linux Enterprise Server 15 SP5 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For SUSE Linux Enterprise Server 15 SP5, the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. The SUSE Linux Enterprise Server 15 SP5 is compiled with all the settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing.adoc[]
 
