--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -27,7 +27,7 @@ The following Linux distributions are supported:
 
 .What you'll need
 
-The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
+The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
 
 * For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
 +
@@ -57,7 +57,7 @@ rpm -e netapp_linux_unified_host_utilities-7-1
 +
 For older versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the uninstall command to remove the installed package.
 
-. Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/[NetApp Support Site^] to your host.
+. Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
 . Go to the directory to which you downloaded the software package and use the following command to install it:
 +
