--- a/nvme_ol_88.adoc
+++ b/nvme_ol_88.adoc
@@ -19,11 +19,11 @@ NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and oth
 
 The following support is available for the NVMe-oF host configuration for OL 8.8 with ONTAP:
 
-* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
 * Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, for SCSI LUNs you can configure dm-multipath for SCSI mpath devices, whereas NVMe multipath might be used to configure NVMe-oF namespace devices on the host.
 
-* There is no sanlun support for NVMe-oF. Therefore, there is no host utility support for NVMe-oF on an OL 8.8 host. You can rely on the NetApp plug-in included in the native nvme-cli package for all NVMe-oF transports.
+* There is no sanlun support for NVMe-oF. Therefore, there is no host utility support for NVMe-oF on an OL 8.8 host. You can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
@@ -98,7 +98,7 @@ If the `hostnqn` strings do not match, you can use the `vserver modify` command 
 +
 [NOTE]
 ====
-If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and `dm-multipath` for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from `dm-multipath` to prevent `dm-multipath` from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf` file: 
+If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and `dm-multipath` for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from `dm-multipath` to prevent `dm-multipath` from claiming these namespace devices. You can add the `enable_foreign` setting to the `/etc/multipath.conf` file: 
 
 ----
 # cat /etc/multipath.conf 
@@ -107,9 +107,10 @@ defaults {
   enable_foreign     NONE 
 } 
 ----
-====
 
-. Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect. 
+Restart the multipathd daemon by running a `systemctl restart multipathd` command to let the new setting to take effect. 
+
+====
 
  
 
@@ -513,17 +514,9 @@ The NVMe-oF host configuration for OL 8.8 with ONTAP release has the following k
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 |1517321
 
-|Oracle Linux 8.8 NVMe-oF Hosts create duplicate Persistent Discovery Controllers
+|Oracle Linux 8.8 NVMe-oF hosts create duplicate Persistent Discovery Controllers
 
 |On OL 8.8 NVMe-oF hosts, Persistent Discovery Controllers (PDCs) are created by passing the `-p` option to the `nvme discover` command. For a given initiator-target combination, only one PDC is expected to be created with each invocation of the `nvme discover` command. However, beginning with OL 8.x, NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This wastes resources on both the host and the target.
 |https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
 |===
-
-
-
-
-
-
-
-
 
